<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/greyishBrown">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvForceUpdateTitle"
            style="@style/DialogTitle"
            android:text="@string/force_update_title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvForceUpdate"
            style="@style/DialogMessage"
            android:text="@string/force_update_app"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvForceUpdateTitle" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/tvConfirm"
            style="@style/DialogTextAction"
            android:background="@drawable/bg_brick_radius_2"
            android:text="@string/force_update_confirm"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvForceUpdate" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>