<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="mainFragmentListener"
            type="com.example.myapplication.ui.screen.main.MainFragment" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/viewParent"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:onClick="@{v->mainFragmentListener.viewParentClick()}">

        <com.example.myapplication.ui.base.TextViewNotoSansJpBold
            android:id="@+id/tvWelcome"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="@dimen/_20sdp"
            tools:text="@string/string_welcome_email"
            android:textColor="@color/color_btn_navy"
            android:textStyle="bold"
            app:layout_constraintWidth_percent="0.9"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.20"/>

        <com.example.myapplication.ui.base.ButtonNotoSansJpBold
            android:id="@+id/btnSendData"
            android:layout_width="0dp"
            android:layout_height="@dimen/_70sdp"
            android:text="@string/string_send_data"
            android:background="@drawable/bg_corner_radius_btn_cyan"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintWidth_percent="0.9"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.4"
            android:textSize="@dimen/_14sdp"
            android:onClick="@{v-> mainFragmentListener.btnSendDataClick()}"/>

        <com.example.myapplication.ui.base.ButtonNotoSansJpMedium
            android:id="@+id/btnSignOut"
            android:layout_width="0dp"
            android:layout_height="@dimen/_60sdp"
            android:text="@string/string_sign_out"
            android:background="@drawable/bg_corner_radius_btn_red_light"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintWidth_percent="0.9"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.7"
            android:textSize="@dimen/_14sdp"
            android:onClick="@{v-> mainFragmentListener.btnSignOutClick()}"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
