<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
        name="signInListener"
        type="com.example.myapplication.ui.screen.signin.SignInFragment" />
    </data>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/viewParent"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white"
            tools:context=".ui.screen.signin.SignInFragment"
            android:onClick="@{v->signInListener.viewParentClick()}">

            <com.example.myapplication.ui.base.TextViewNotoSansJpBold
                android:id="@+id/tvWelcome"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textSize="@dimen/_23sdp"
                android:text="@string/string_welcome"
                android:textColor="@color/color_btn_navy"
                android:textStyle="bold"
                app:layout_constraintWidth_percent="0.75"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintHorizontal_bias="0.2"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintVertical_bias="0.20" />

            <com.example.myapplication.ui.base.BaseEditText
                android:id="@+id/etEmail"
                android:layout_width="0dp"
                android:layout_height="@dimen/_56sdp"
                app:layout_constraintWidth_percent="0.9"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvWelcome"
                android:layout_marginTop="@dimen/_50sdp"
                android:inputType="textEmailAddress"
                android:hint="@string/string_email"/>

            <com.example.myapplication.ui.base.BaseEditText
                android:id="@+id/etPassword"
                android:layout_width="0dp"
                android:layout_height="@dimen/_56sdp"
                app:layout_constraintWidth_percent="0.9"
                app:layout_constraintStart_toStartOf="@id/etEmail"
                app:layout_constraintEnd_toEndOf="@id/etEmail"
                app:layout_constraintTop_toBottomOf="@id/etEmail"
                android:layout_marginTop="@dimen/_15sdp"
                android:hint="@string/string_password"
                android:inputType="textPassword"/>

            <com.example.myapplication.ui.base.TextViewNotoSansJpMedium
                android:id="@+id/tvError"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                tools:text="不正なエラー"
                android:textSize="@dimen/_15sdp"
                android:textColor="@color/color_btn_red_light"
                app:layout_constraintStart_toStartOf="@id/etEmail"
                app:layout_constraintEnd_toEndOf="@id/etEmail"
                app:layout_constraintTop_toBottomOf="@id/etPassword"
                android:layout_marginTop="@dimen/_18sdp"/>
            
            <com.example.myapplication.ui.base.ButtonNotoSansJpMedium
                android:id="@+id/btnSignIn"
                android:layout_width="0dp"
                android:layout_height="@dimen/_56sdp"
                android:text="@string/string_sign_in"
                android:background="@drawable/bg_corner_radius_btn_navy"
                app:layout_constraintStart_toStartOf="@id/etEmail"
                app:layout_constraintEnd_toEndOf="@id/etPassword"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintVertical_bias="0.8"
                android:textSize="@dimen/_14sdp"
                android:onClick="@{v-> signInListener.btnSignInClick()}"/>

            <com.example.myapplication.ui.base.TextViewNotoSansJpMedium
                android:id="@+id/tvSignUp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="アカウントをお持ちではありませんか？ 今すぐ登録"
                android:textSize="@dimen/_12sdp"
                android:textColor="@color/color_btn_navy"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginBottom="@dimen/_20sdp"/>

        </androidx.constraintlayout.widget.ConstraintLayout>
</layout>